# bmpconvert

./: .gitignore  CMakeLists.txt
src/: exceptions.hpp  main.cpp
src/format/: bmp.cpp  bmp.hpp  pixel_array.cpp  pixel_array.hpp
src/format/pixel_array/: expanded.cpp  expanded.hpp  packed.cpp  packed.hpp
src/math/: matrix.hpp  vec.hpp
